--- a/templates/gripo-db-service.yaml
+++ b/templates/gripo-db-service.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-gripoDb
+  name: gripo-db
 spec:
   type: {{ .Values.service.gripoDb.type }}
   ports:
     - port: {{ .Values.service.gripoDb.port }}
       targetPort: {{ .Values.service.gripoDb.port }}
   selector:
-    app: gripoDb
+    app: gripo-db
 
