--- a/templates/gripo-frontend-service.yaml
+++ b/templates/gripo-frontend-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-gripoFrontend
+  name: gripo-frontend
 spec:
   type: {{ .Values.service.gripoFrontend.type }}
   ports:
     - port: {{ .Values.service.gripoFrontend.port }}
       targetPort: {{ .Values.service.gripoFrontend.port }}
   selector:
-    app: gripoFrontend
+    app: gripo-frontend
