--- a/templates/gripo-redis-service.yaml
+++ b/templates/gripo-redis-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-gripoRedis
+  name: gripo-redis
 spec:
   type: {{ .Values.service.gripoRedis.type }}
   ports:
     - port: {{ .Values.service.gripoRedis.port }}
       targetPort: {{ .Values.service.gripoRedis.port }}
   selector:
-    app: gripoRedis
+    app: gripo-redis
 
