--- a/templates/gripo-redis-statefulset.yaml
+++ b/templates/gripo-redis-statefulset.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ .Release.Name }}-gripoRedis
+  name: gripo-redis
 spec:
-  serviceName: {{ .Release.Name }}-gripoRedis
+  serviceName: gripo-redis
   replicas: 1
   selector:
     matchLabels:
-      app: gripoRedis
+      app: gripo-redis
   template:
     metadata:
       labels:
-        app: gripoRedis
+        app: gripo-redis
     spec:
       containers:
-        - name: gripoRedis
+        - name: gripo-redis
           image: {{ .Values.image.gripoRedis }}
           ports:
             - containerPort: {{ .Values.service.gripoRedis.port }}
